--- a/app/index.html
+++ b/app/index.html
@@ -18,9 +18,7 @@
             <div id="game">
                 <div class="background">
                 </div>
-                <div class="static-objects">
-                </div>
-                <div class="dynamic-objects">
+                <div class="objects">
                 </div>
                 <div class="foreground">
                 </div>
