refactor component system

--- a/app/todo.html
+++ b/app/todo.html
@@ -29,18 +29,30 @@
                     <li>Basic entities</li>
                     <li>Process input</li>
                     <li>Run animations</li>
+                    <li>What attack system am I going to use</li>
+                    <li>There's a dummy opponent</li>
                 </ul>
 
                 <h3>What to do:</h3>
                 <ul>
-                    <li>What attack system am I going to use (DOING NOW)</li>
-                    <li>There's a dummy opponent</li>
-                    <li>You can attack the opponent (what attacks are there?)</li>
+                    <li>Rearchitect component system a little (DOING NOW)</h1>
+                    <li>You can attack the opponent</li>
                     <li>There's rounds of 10 seconds</li>
                 </ul>
 
                 <h3>Messages</h3>
                 <ul>
+                    <li>
+                        I'd like to have some sort of a fencing game where you have a sword, and you can attack and defend.
+
+                        We need a rock paper scissors kind of thing, where any action is weak against one and strong against another. Three actions:
+
+                        pierce attack beats hack attack
+                        hack attack beats deflect
+                        deflect beats pierce attack
+
+                        Default stance is defend, where no attack has effect.
+                    </li>
                     <li>
                         So I built animations as just a special case of image having canvas elements. I think it's a bit hacky, but it works fine and I think it's quite maintainable. Now for the game logic part..
 
