--- a/app/todo.html
+++ b/app/todo.html
@@ -20,6 +20,8 @@
                 <h1>Ludum Dare 26</h1>
                 <h2>10 Seconds</h2>
 
+                <h1>LUNCH BREAK</h1>
+
                 <h3>What is done</h3>
                 <ul>
                     <li>Set up dev environment (SublimeText2, CoffeeScript, Node.js, Grunt)</li>
@@ -31,17 +33,35 @@
                     <li>Run animations</li>
                     <li>What attack system am I going to use</li>
                     <li>There's a dummy opponent</li>
+                    <li>Rearchitect component system a little</h1>
+                    <li>You can attack the opponent</li>
+                    <li>Attack timeslots</li>
                 </ul>
 
                 <h3>What to do:</h3>
                 <ul>
-                    <li>Rearchitect component system a little (DOING NOW)</h1>
-                    <li>You can attack the opponent</li>
-                    <li>There's rounds of 10 seconds</li>
+                    <li>Trigger animations (events) (DOING NOW)</li>
+                    <li>Detect proximity</li>
+                    <li>Rounds of 10 seconds</li>
+                    <li>Audio components</li>
+                    <li>Artwork</li>
                 </ul>
 
                 <h3>Messages</h3>
                 <ul>
+                    <li>
+                        I didn't sleep very well, I hope I'll pull it off.
+                    </li>
+                    <li>
+                        I have a very rough fighting system now. Moving around does nothing yet, I need some code to detect where someone is.
+                        It does not take time into account either. I want a system where
+                        after selecting an attack there's a period where your opponent
+                        does not know which attack you did, but they know you are attacking, so they can choose to react. Hopefully I can do that
+                        and still have time left for art tomorrow.
+                    </li>
+                    <li>
+                        That rearchitecting was great. I eliminated a bunch of useless code and everything is much prettier and composeable now.
+                    </li>
                     <li>
                         I'd like to have some sort of a fencing game where you have a sword, and you can attack and defend.
 
