added kendo player with 5 animations

--- a/app/todo.html
+++ b/app/todo.html
@@ -34,19 +34,25 @@
                     <li>Rearchitect component system a little</h1>
                     <li>You can attack the opponent</li>
                     <li>Attack timeslots</li>
+                    <li>Trigger animations (events)</li>
+                    <li>Detect proximity</li>
+                    <li>Rounds of 10 seconds</li>
                 </ul>
 
                 <h3>What to do:</h3>
                 <ul>
-                    <li>Trigger animations (events) (DOING NOW)</li>
-                    <li>Detect proximity</li>
-                    <li>Rounds of 10 seconds</li>
-                    <li>Audio components</li>
                     <li>Artwork</li>
+                    <li>Audio components</li>
                 </ul>
 
                 <h3>Messages</h3>
                 <ul>
+                    <li>
+                        Time for artwork, only 6 hours left for artwork. Then 2 hours finishing and that's it..
+                    </li>
+                    <li>
+                        Animations work reasonably well, not very efficient but it's alright. Took me too long again, I've never done animation before in a game.
+                    </li>
                     <li>
                         I didn't sleep very well, I hope I'll pull it off.
                     </li>
